--- a/work/springbootwork/bootErp/src/main/resources/templates/board/board_write.html
+++ b/work/springbootwork/bootErp/src/main/resources/templates/board/board_write.html
@@ -33,8 +33,13 @@
 
 						<label class="col-sm-2 col-sm-2 control-label">작성자</label>
 						<div class="col-sm-10">
-							<input type="hidden" name="id" value="${user.id }">
-							<p class="form-control-static">${user.name }</p>
+
+							<input type="hidden" th:name="id" th:value="${user.id }" th:if="${user!=null}">
+							<input type="hidden" th:name="id" th:value="${'881011kim' }" th:unless="${user!=null}">
+							<p class="form-control-static" th:text="${user.id }" th:if="${user!=null}"></p>
+							<p class="form-control-static" th:text="${'881011kim'}" th:unless="${user!=null}"></p>
+							
+							
 						</div>
 						<div class="form-group">
 							<label class="col-sm-2 col-sm-2 control-label">게시글 유형</label>
