--- a/work/springbootwork/bootErp/src/main/resources/templates/include/top.html
+++ b/work/springbootwork/bootErp/src/main/resources/templates/include/top.html
@@ -21,21 +21,22 @@
 </head>
 <body>
 	<div th:fragment="top">
-		<div style="height: 90px; padding:10px">
+		<div style="height: 90px; padding: 10px">
 
 			<div id="toparea" class="navbar navbar-inverse">
 				<a href="#"
 					style="position: absolute; top: 30px; font-size: 18pt; font-weight: bolder; text-decoration: none; padding-left: 10px">KimSaemERP</a>
 
 				<ul class="nav navbar-nav navbar-right"
-					style="position: relative; top: 20px" th:if="${user==null}">
+					style="position: relative; top: 20px" th:if="${session.user==null}">
 					<li style="margin-right: 20px; height: 70px"><a
 						href="/erp/emp/login"><span class="glyphicon glyphicon-log-in">
 						</span>Login</a></li>
 				</ul>
 
 				<ul class="nav navbar-nav navbar-right"
-					style="position: relative; top: 20px" th:unless="${user==null}">
+					style="position: relative; top: 20px"
+					th:unless="${session.user==null}">
 					<li><a href="/erp/emp/spring/logout"><span
 							class="glyphicon glyphicon-log-out"></span> Logout</a></li>
 					<li><a href="/erp/emp/mypage"><span
@@ -43,9 +44,10 @@
 
 				</ul>
 
-				<span class="navbar-form pull-right" th:unless="${user==null}"> <img class="img-circle"
+				<span class="navbar-form pull-right"
+					th:unless="${session.user==null}"> <img class="img-circle"
 					style="width: 60px; height: 70px"
-					src="/erp/images/${user.profile_photo }" />
+					th:src="@{/images/}+${session.user.profile_photo}" />
 				</span>
 
 				<form class="navbar-form pull-right"
@@ -63,7 +65,7 @@
 			<div class="container-fluid">
 				<div class="collapse navbar-collapse" id="myNavbar">
 					<ul class="nav navbar-nav">
-						<li class="active"><a href="/erp/index.do">Home</a></li>
+						<li class="active"><a href="/erp/index.html">Home</a></li>
 						<li><a href="/erp/menu/insa.do">업무관리</a></li>
 						<li><a href="#">자원관리</a></li>
 						<li><a href="/erp/board/list?category=all">커뮤니티</a></li>
