--- a/work/springbootwork/bootErp/src/main/resources/templates/layout/mainLayout.html
+++ b/work/springbootwork/bootErp/src/main/resources/templates/layout/mainLayout.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+<html xmlns:th="http://www.thymeleaf.org" 
+     xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -33,33 +33,33 @@
 		<th:block th:replace="include/top :: top">
 		</th:block>
 	</div>
-
 	<div style="background-color: #edeef1;padding: 20px;height: 800px">
+		
 			<div class="row" style="margin-left: auto;margin-right: auto;">
-			 	<div class="col-sm-3" 
+			 	<div class="col-sm-2" 
 			 	style="background-color: white;margin-right:10px;padding: 0px ">
-			 		 <div style="border-color:white;height: 800px;">
+			 		 <div
+			 		 style="border-color:white;height: 800px;">
 				        <div style="background-color:#63cde7;padding: 20px;
 				        font-family:HY-견고딕;font-size: 16pt;color: white;
-				        font-weight: bolder;">${user.job_category}</div>
-
-				       	<!-- 이곳에 menu화면을 연결하세요" -->
-						<th:block th:replace="menu/board_menu :: menu"></th:block>
-					 	
+				         font-weight: bolder;" th:text="${session.user.job_category}" th:if="${session.user!=null}"></div>
+						<div style="background-color:#63cde7;padding: 20px;
+				        font-family:HY-견고딕;font-size: 16pt;color: white;
+				         font-weight: bolder;" th:text="${'자바나라'}" th:unless="${session.user!=null}"></div>
+						
+				       <!-- 이곳에 menu화면을 연결하세요" -->
+				      <th:block th:replace="menu/submenu :: menu">
+						</th:block>
       				 </div>
 			 	</div>
-			 	<div class="col-sm-8" style="background-color: white;height: 800px;">
-
-			 		<!-- 이곳에 content화면을 연결하세요" -->		 	
+			 	<div class="col-sm-9" style="background-color: white;height: 800px;">
 					<th:block layout:fragment="content"></th:block>
-
-			 	</div>
+			 		<!-- 이곳에 content화면을 연결하세요" -->		 	</div>
 			</div>
 	</div>
 	
 </body>
 </html>
-
 
 
 
