--- a/work/msawork/jpa_rest_exam/src/main/resources/templates/product/prdlist.html
+++ b/work/msawork/jpa_rest_exam/src/main/resources/templates/product/prdlist.html
@@ -10,16 +10,23 @@
 <div class="container-fluid text-center bg-grey">
     <h2>상품 목록 조회</h2>
     <h4>당신이 필요한 모든것</h4>
-    <div class="row text-center">
-        <div class="col-sm-4" th:each="product:${productlist}" >
-            <div class="thumbnail">
-                <img th:src="${product.image}"  alt="Paris">
-                <p><strong th:text="${product.productName}"></strong></p>
-                <p th:text="${product.info}">Yes, we built Paris</p>
-                <p th:text="${product.category.categoryName}"></p>
+    <form method="post" action="/product/order">
+        <div class="row text-center">
+            <div class="col-sm-4" th:each="product, iterStat:${productlist}" name="RequestProductListDTO" >
+                <div class="thumbnail">
+                    <img th:src="${product.image}"  alt="Paris">
+                    <p><strong th:text="${product.productName}"></strong></p>
+                    <p th:text="${product.info}">Yes, we built Paris</p>
+                    <p th:text="${product.category.categoryName}"></p>
+                    <input type="hidden"
+                           th:name="'list[' + ${iterStat.index} + '].productNo'"
+                           th:value="${product.productNo}">
+                </div>
+                <input type="checkbox" th:name="'list[' + ${iterStat.index} + '].checked'"/>
             </div>
         </div>
-    </div>
+        <button type="submit">주문하기</button>
+    </form>
 </div>
 </body>
 </html>
