--- a/work/msawork/springcloud/customer-service/src/main/resources/templates/customer/loginForm.html
+++ b/work/msawork/springcloud/customer-service/src/main/resources/templates/customer/loginForm.html
@@ -12,7 +12,7 @@
 
 <div class="container center-contents">
     <div class="row">
-        <form class="form-signin" method="post" th:action="@{/mylogin}">
+        <form class="form-signin" method="post" th:action="@{/customer/login}">
             <h1 class="h3 mb-3 font-weight-normal"> 로그인 </h1>
             <label for="username" class="sr-only">로그인 아이디</label>
             <input id="username"
