--- a/work/msawork/springcloud/customer-service/src/main/resources/templates/customer/register.html
+++ b/work/msawork/springcloud/customer-service/src/main/resources/templates/customer/register.html
@@ -48,7 +48,10 @@
       <div class="form-group">
         <label for="role" class="col-sm-2 control-label">권한</label>
         <div class="col-sm-10">
-          <input type="text" class="form-control input-large" name="role" id="role" placeholder="권한" required>
+          <select name="role" id="role" placeholder="권한">
+            <option value="ROLE_USER">USER</option>
+            <option value="ROLE_ADMIN">ADMIN</option>
+          </select>
         </div>
       </div>
       <div class="form-group">
