--- a/work/msawork/springcloud/customer-service/src/main/resources/templates/customer/userPage.html
+++ b/work/msawork/springcloud/customer-service/src/main/resources/templates/customer/userPage.html
@@ -3,9 +3,8 @@
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head th:replace="layout/header::userHead"></head>
 <body>
+
 <div th:replace="layout/top::header"></div>
-  <div class="row">
-    <h1>접근 권한이 없습니다</h1>
-  </div>
+    <h1>마이페이지입니다.</h1>
 </body>
 </html>
