--- a/work/msawork/springcloud/customer-service/src/main/resources/templates/index.html
+++ b/work/msawork/springcloud/customer-service/src/main/resources/templates/index.html
@@ -1,13 +1,10 @@
-<html  xmlns:th="http://www.thymeleaf.org">
+<!DOCTYPE html>
+<html lang="ko" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head th:replace="layout/header::userHead"></head>
 <body>
-<div th:replace="layout/top::header"></div>
-<body>
 
-<div class="container d-flex justify-content-center">
-  <div style="width:700px; margin-top: 30px;">
-    <h1>index 페이지입니다.</h1>
-  </div>
-</div>
+<div th:replace="layout/top::header"></div>
+    <h1>index페이지입니다.</h1>
 </body>
 </html>
