--- a/work/msawork/springsecuritytest/src/main/resources/templates/index.html
+++ b/work/msawork/springsecuritytest/src/main/resources/templates/index.html
@@ -16,16 +16,19 @@
 
     <div class="links">
 
-        <div class="link">
+        <div class="link" sec:authorize="!isAuthenticated()">
+            <a href="/mylogin">  로그인  </a>
+        </div>
+        <div class="link" sec:authorize="isAuthenticated()">
             <a href="/showauth"> 인증정보 확인하기 </a>
         </div>
-        <div class="link" >
-            <a href="/user/page">  유저 페이지  </a>
+        <div class="link" sec:authorize="isAuthenticated()" >
+            <a href="/user/page" >  유저 페이지  </a>
         </div>
-        <div class="link" >
+        <div class="link" sec:authorize="isAuthenticated()">
             <a href="/admin/page">  관리자 페이지 </a>
         </div>
-        <div class="link" >
+        <div class="link" sec:authorize="isAuthenticated()">
             <form th:action="@{/logout}" method="post">
                 <button class="btn btn-info">로그아웃</button>
             </form>
