--- a/work/msawork/springcloud/customer-service/src/main/resources/templates/layout/top.html
+++ b/work/msawork/springcloud/customer-service/src/main/resources/templates/layout/top.html
@@ -4,12 +4,13 @@
 <div th:fragment="header">
     <nav class="navbar navbar-dark sticky-top bg-dark ">
         <div class="container">
-            <a class="text-light" href="#"><h4>김샘쇼핑몰</h4></a>
+            <a class="text-light" href="#"><h4>병준쇼핑몰</h4></a>
             <ul class="nav justify-content-end">
-                <li class="nav-item" sec:authorize="isAnonymous()"><a class="nav-link text-light" th:href="@{customer/login}">로그인</a></li>
-                <li class="nav-item" sec:authorize="isAnonymous()"><a class="nav-link text-light" th:href="@{customer/create}">회원가입</a></li>
+                <li class="nav-item" sec:authorize="isAuthenticated()"><p class="nav-link text-light" sec:authentication="principal.name"></p></li>
+                <li class="nav-item" sec:authorize="isAnonymous()"><a class="nav-link text-light" th:href="@{/customer/login}">로그인</a></li>
+                <li class="nav-item" sec:authorize="isAnonymous()"><a class="nav-link text-light" th:href="@{/customer/create}">회원가입</a></li>
                 <li class="nav-item" sec:authorize="isAuthenticated()"><a class="nav-link text-light" th:href="@{/logout}">로그아웃</a></li>
-                <li class="nav-item" sec:authorize="hasAuthority('ROLE_USER')"><a class="nav-link text-light" th:href="@{customer/mypage}">마이페이지</a></li>
+                <li class="nav-item" sec:authorize="hasAuthority('ROLE_USER')"><a class="nav-link text-light" th:href="@{/customer/mypage}">마이페이지</a></li>
                 <li class="nav-item" sec:authorize="hasAuthority('ROLE_ADMIN')"><a class="nav-link text-light" th:href="@{/admin}">관리자</a></li>
                 <li class="nav-item" ><a class="nav-link text-light" href="/">HOME</a></li>
             </ul>
