--- a/work/msawork/springcloud/customer-service/src/main/resources/templates/layout/top.html
+++ b/work/msawork/springcloud/customer-service/src/main/resources/templates/layout/top.html
@@ -6,7 +6,7 @@
         <div class="container">
             <a class="text-light" href="#"><h4>병준쇼핑몰</h4></a>
             <ul class="nav justify-content-end">
-                <li class="nav-item" sec:authorize="isAuthenticated()"><p class="nav-link text-light" sec:authentication="principal.name"></p></li>
+<!--                <li class="nav-item" sec:authorize="isAuthenticated()"><p class="nav-link text-light" sec:authentication="user.id"></p></li>-->
                 <li class="nav-item" sec:authorize="isAnonymous()"><a class="nav-link text-light" th:href="@{/customer/login}">로그인</a></li>
                 <li class="nav-item" sec:authorize="isAnonymous()"><a class="nav-link text-light" th:href="@{/customer/create}">회원가입</a></li>
                 <li class="nav-item" sec:authorize="isAuthenticated()"><a class="nav-link text-light" th:href="@{/logout}">로그아웃</a></li>
