--- a/work/msawork/frontserver/src/main/resources/templates/layout/header.html
+++ b/work/msawork/frontserver/src/main/resources/templates/layout/header.html
@@ -11,7 +11,7 @@
                 let res = await axios( {
                     withCredentials: true,
                     method: "GET",
-                    url: "http://127.0.0.1:8089/my/api/mypage",
+                    url: "http://127.0.0.1:9300/customer/my/api/mypage",
                     headers: {
                         // 로컬스토리지에 저장된 인증 토큰을 다음 요청에 요청헤더에 저장해서 가지고 나감
                         AUTHORIZATION:localStorage.getItem("auth-token")
