--- a/work/msawork/frontserver/src/main/resources/templates/layout/top.html
+++ b/work/msawork/frontserver/src/main/resources/templates/layout/top.html
@@ -10,7 +10,7 @@
                 <li class="nav-item" ><a class="nav-link text-light" th:href="@{/customer/login}">로그인</a></li>
                 <li class="nav-item" ><a class="nav-link text-light" th:href="@{/customer/create}">회원가입</a></li>
                 <li class="nav-item" ><a class="nav-link text-light" th:href="@{/logout}">로그아웃</a></li>
-                <li class="nav-item" ><a class="nav-link text-light" th:href="@{/customer/mypage}">마이페이지</a></li>
+                <li class="nav-item" ><a class="nav-link text-light" href="javascript:test()">마이페이지</a></li>
                 <li class="nav-item" ><a class="nav-link text-light" href="javascript:test()">관리자</a></li>
                 <li class="nav-item" ><a class="nav-link text-light" href="/">HOME</a></li>
             </ul>
